* add calculation of interesting rate on server side (TODO: che if it's correct) * simplify redux state

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -48,8 +48,12 @@ p {
 
 .financial-inputs {
 	padding: 20px;
+	clear: both;
 }
-
+.financial-display{
+	padding: 20px;
+	clear: both;
+}
 .input-label {
 	margin-bottom: 4px;
 	margin-top: 12px;
